--- a/motion.html
+++ b/motion.html
@@ -21,7 +21,7 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bouncing.js"></script>
-  <script src="js/bouncingEnv_test.js"></script>
+  <!-- // <script src="js/bouncingEnv_test.js"></script> -->
   <!--<script src="js/motion.js"></script>-->
 </body>
 </html>
