--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/game.js"></script>
-<!-- <script src="js/app.js"></script> -->
-<script src="js/app_additional.js"></script>
-</body>
+<script src="js/app.js"></script>
+<!-- <script src="js/app_additional.js"></script>
+ --></body>
 </html>
