--- a/index.html
+++ b/index.html
@@ -7,88 +7,117 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header></header>
-    <section id="court" class="text-center center-block">
-      <div id="player1" class="halfcourt">
-        <div id="p1_score" class="score">0</div>
-        <img id="pika" class="fectchPosition" src="img/pokeball.png"/>
-        <img id="p1" class="fetchPosition" src="img/playerLeft.png" />
-      </div>
-      <div id="player2" class="halfcourt">
-        <div id="p2_score" class="score">0</div>
-        <img id="p2" class="fetchPosition" src="img/playerRight.png" />
-      </div>
-      <div id="threshold" style="top:300px,left:200px,width:400px,height:2px,background:red"></div>
-      <div id="countdown"></div>
-    </section>
-    <section id="warning">
-      <div class="text-center center-block">
-        <span class="label label-warning"><img src="img/warning.png" style="height:30px">WARNING: PLEASE DO NOT CHANGE THE WINDOW SIZE DURING THE GAME. IT MIGHT BREAK THE GAME</span>
-      </div>
-    </section>
-    <section id="menu" class="text-center">
-    </section>
-    <section id="instruction" class="text-center center-block">
-      <div id="method" style="background:url('img/header.png') no-repeat;margin-left:50px">
-        <div id="logo">
-          <img src="img/pikachu.png">
+    <header class="center-block text-center">
+      <button type="button" class="gameBtn" id="reset">RESTART</button>
+    </header>
+    <div id="container" class="center-block">
+      <section id="court" class="text-center center-block">
+        <div id="player1" class="halfcourt">
+          <div id="p1_score" class="score">0</div>
+          <img id="pika" src="img/pokeball.png"/>
+          <img id="p1" src="img/playerLeft.png" />
         </div>
-        <div id="keyboard1">
-          <table>
-            <tr>
-              <td></td><td class="userJUMP">W</td><td></td>
-            </tr>
-            <tr>
-              <td class="userLEFT">A</td><td></td><td class="userRIGHT">D</td>
-            </tr>
-          </table>
-          <table id="instr_p1">
-            <tr >
-              <td class="userSPIKE">SPACE</td>
-            </tr>
-            <tr>
-              <td class="playerCell">PLAYER 1</td>
-            </tr>
-          </table>
+        <div id="player2" class="halfcourt">
+          <div id="p2_score" class="score">0</div>
+          <img id="p2" src="img/playerRight.png" />
         </div>
-        <div id="keyboard2">
-          <table>
-            <tr>
-              <td></td><td class="userJUMP">▲</td><td></td>
-            </tr>
-            <tr>
-              <td class="userLEFT">◄</td><td></td><td class="userRIGHT">►</td>
-            </tr>
-          </table>
-          <table id="instr_p2">
-            <tr >
-              <td class="userSPIKE">RETURN</td>
-            </tr>
-            <tr>
-              <td class="playerCell">PLAYER 2</td>
-            </tr>
-          </table>
-        </div>
-      </div>
-      <div id="animation">
-        <img src="img/start.png" id="starterImage">
-      </div>
-      <div>
-        <button id="start" class="gameBtn" type="button">START THE GAME</button>
-      </div>
-    </section>
-    <section id="gameOver" class="text-center center-block">
-      <div>
-        <img src="img/gameover.png"><br/><br/>
-        <button class="gameBtn" id="restart">RESTART</button>
-      </div>
-    </section>
+        <div id="countdown" class="text-center center-block"></div>
+      </section>
 
+      <section id="warning">
+        <div class="text-center center-block">
+          <span class="label label-warning"><img src="img/warning.png" style="height:30px">WARNING: PLEASE DO NOT CHANGE THE WINDOW SIZE DURING THE GAME. IT MIGHT BREAK THE GAME</span>
+        </div>
+      </section>
+
+      <section id="instruction" class="text-center center-block">
+        <div id="method" style="background:url('img/header.png') no-repeat;margin-left:50px">
+          <div id="logo">
+            <img src="img/pikachu.png">
+          </div>
+          <div id="keyboard1">
+            <table>
+              <tr>
+                <td></td><td class="userJUMP">W</td><td></td>
+              </tr>
+              <tr>
+                <td class="userLEFT">A</td><td></td><td class="userRIGHT">D</td>
+              </tr>
+            </table>
+            <table id="instr_p1">
+              <tr >
+                <td class="userSPIKE">SPACE</td>
+              </tr>
+              <tr>
+                <td class="playerCell">PLAYER 1</td>
+              </tr>
+            </table>
+          </div>
+          <div id="keyboard2">
+            <table>
+              <tr>
+                <td></td><td class="userJUMP">▲</td><td></td>
+              </tr>
+              <tr>
+                <td class="userLEFT">◄</td><td></td><td class="userRIGHT">►</td>
+              </tr>
+            </table>
+            <table id="instr_p2">
+              <tr >
+                <td class="userSPIKE">RETURN</td>
+              </tr>
+              <tr>
+                <td class="playerCell">PLAYER 2</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div id="animation">
+          <img src="img/start.png" id="starterImage">
+        </div>
+        <div>
+          <button type="button" data-toggle="modal" data-target="#settingBox"class="gameBtn">SETTING</button>
+          <button id="start" class="gameBtn" type="button">START THE GAME</button>
+        </div>
+      </section>
+
+      <section id="gameOver" class="text-center center-block">
+        <div>
+          <img src="img/gameover.png"><br/><br/>
+          <button class="gameBtn" id="restart">RESTART</button>
+        </div>
+      </section>
+    </div>
+    <div id="NET"></div>
+    <section id="effect"></section>
     <div id="userGuide">
       <span></span>
     </div>
 
-    <script src="js/jquery.min.js"></script>
+    <!-- Setting Modal -->
+    <div class="modal fade" id="settingBox" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="boxModal">
+          <div class="titleModal text-center">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <strong>GAME SETTING</strong>
+          </div>
+          <div class="textModal">
+            <form class="form-inline">
+              <label for="#max-point">Maximum Point</label>
+              <input type="number" class="form-control" placeholder="DEFAULT 21" id="max-point">
+            </form>
+          </div>
+          <div class="titleModal text-right">
+            <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
+            <button type="button" class="btn btn-primary" id="saveSetting" data-dismiss="modal">Save and CLOSE</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/jBeep.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/game.js"></script>
